# rlaif-ppo-lora-nlp-rtx-4080-12gb

./: .gitattributes  .gitignore  LICENSE.txt  README.md.txt  pyproject.toml
configs/: config_phi2_harmless_ollama.yml  config_phi2_harmless_prev.yml  config_phi2_harmless_tinyllama.yml  config_phi2_humoristic.yml
src/rlaif-pipeline/: pipeline.py  pipeline_old2.py
src/rlaif_pipeline/: __init__.py  cli.py  pipeline.py
